Added script to composer.json

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
         }
     },
     "bin": ["bin/bek"],
+    "scripts": {
+        "post-install-cmd": [
+            "chmod +x bin/bek"
+        ]
+    },
     "authors": [
         {
             "name": "bekhruzcodes",
